[tool.poetry]
name = "snt-langage-css"
version = "0.1.0"
description = ""
authors = ["Yannick Mulot <yannick.mulot@ac-creteil.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.9.0"
cssutils = "^2.9.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
